--- a/SoundScape-API/soundscape/pom.xml
+++ b/SoundScape-API/soundscape/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>soundscape</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>soundscape</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Music Scene Website</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>24</java.version>
+		<java.version>21</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -64,7 +64,10 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
 		</plugins>
+
+
 	</build>
 
 </project>
